--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -21,7 +21,8 @@ body{
   font-size:1.6rem;
   line-height:1.7;
   font-family:'Roboto', sans-serif;
-  background:#000;
+  background:#040D21;
+
   // background-image: linear-gradient(to right bottom,#E70B94,rgba(130,87,230,0.61));
   height: 100vh;
   color:#fff;
