--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,39 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   font-family: "Roboto", sans-serif;
-  background: #000;
+  background: #040D21;
   height: 100vh;
   color: #fff;
 }
 
+.heading-primary {
+  font-size: 6rem;
+  line-height: 1;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+  background-image: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+.heading-secondary {
+  font-size: 4rem;
+  line-height: 1.05;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+  background: -webkit-linear-gradient(-70deg, #db469f 0%, #2188ff 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/*color-mktg-btn-primary-bg-top: hsla(137,56%,46%,1);
+    --color-mktg-btn-primary-bg-bottom: #2ea44f;
+    --color-mktg-btn-primary-bg-overlay-top: hsla(134,60%,38%,1);
+    --color-mktg-btn-primary-bg-overlay-bottom: #22863a;
+    #FFFFFF, */
 .navigation {
   background: crimson;
   display: flex;
@@ -65,12 +93,16 @@ body {
   height: 100%;
   width: 100%;
   z-index: -1;
-  opacity: 0.23;
+  opacity: 0.15;
 }
 .bg-video__content {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+.main {
+  background-color: #fff;
 }
 
 /*# sourceMappingURL=style.css.map */
